tests/machine/x/fortran/append_builtin.error
error: gfortran: exit status 1
/workspace/mochi/tests/machine/x/fortran/append_builtin.f90:5:39:

    5 |   integer, dimension(size(a)+1) :: app0
      |                                       1
Error: Unexpected data declaration statement at (1)
/workspace/mochi/tests/machine/x/fortran/append_builtin.f90:8:15:

    8 |   print *, app0
      |               1
Error: Function ‘app0’ requires an argument list at (1)
/workspace/mochi/tests/machine/x/fortran/append_builtin.f90:7:2:

    7 |   app0(size(a)+1) = 3
      |  1
Error: Function ‘app0’ at (1) has no IMPLICIT type

